Added auth functionality

--- a/ITAcademyEdu/ITAcademyEdu.Api/appsettings.json
+++ b/ITAcademyEdu/ITAcademyEdu.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=ITAcademyEdu;User Id=postgres;Password=root;"
+  },
+  "JWT": {
+    "ValidAudience": "ITAcademyClients",
+    "ValidIssuer": "127.0.0.1",
+    "Secret": "ITAcademyEduPlatformSecretKey"
   }
 }
