Added CRUD for Teacher and Student

--- a/ITAcademyEdu/ITAcademyEdu.Infrastructure/ITAcademyEdu.Infrastructure.csproj
+++ b/ITAcademyEdu/ITAcademyEdu.Infrastructure/ITAcademyEdu.Infrastructure.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ITAcademyEdu.Application\ITAcademyEdu.Application.csproj" />
     <ProjectReference Include="..\ITAcademyEdu.Domain\ITAcademyEdu.Domain.csproj" />
   </ItemGroup>
 
